--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "speakmate-cloudrun-app",
+  "name": "speakmate-unified-backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -7,6 +7,9 @@
   },
   "dependencies": {
     "@google-cloud/translate": "^8.2.0",
+    "@google-cloud/speech": "^6.4.0",
+    "@google-cloud/text-to-speech": "^5.2.0",
+    "@google-cloud/vertex-ai": "^0.6.0",
     "express": "^4.18.2"
   }
 }
