--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "speakmate-unified-backend",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -10,6 +10,7 @@
     "@google-cloud/speech": "^6.4.0",
     "@google-cloud/text-to-speech": "^5.2.0",
     "@google-cloud/vertex-ai": "^0.6.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "form-data": "^4.0.0"
   }
 }
