--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@google-cloud/text-to-speech": "^5.2.0",
     "@google-cloud/vertex-ai": "^0.6.0",
     "express": "^4.18.2",
-    "form-data": "^4.0.0"
+    "form-data": "^4.0.0",
+    "node-fetch": "^2.7.0"
   }
 }
