--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "speakmate-unified-backend",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "@google-cloud/translate": "^8.2.0",
-    "@google-cloud/speech": "^6.4.0",
-    "@google-cloud/text-to-speech": "^5.2.0",
-    "@google-cloud/vertex-ai": "^0.6.0",
+    "@google-cloud/translate": "^8.2.0",      // Latest as of now
+    "@google-cloud/speech": "^6.4.0",         // Latest as of now
+    "@google-cloud/text-to-speech": "^5.2.0",  // Latest as of now
+    "@google-cloud/vertex-ai": "^1.2.0",      // CRITICAL FIX: Updated to latest stable version
     "express": "^4.18.2",
     "form-data": "^4.0.0",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0"                    // Still needed for form-data with fetch
   }
 }
