--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "speakmate-unified-backend",
-  "version": "1.2.4", 
+  "name": "speakmate-telegram-bot",
+  "version": "1.1.0",
+  "description": "一个基于 Google Cloud AI 服务的 Telegram 聊天机器人，支持翻译、语音识别、TTS 与 Gemini 聊天功能。",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
-    "@google-cloud/translate": "^8.2.0",
-    "@google-cloud/speech": "^6.4.0",
-    "@google-cloud/text-to-speech": "^5.2.0",
-    "@google-cloud/vertex-ai": "^0.6.0",    
+    "@google-cloud/translate": "^7.4.0",
+    "@google-cloud/speech": "^5.3.0",
+    "@google-cloud/text-to-speech": "^4.1.0",
+    "@google-cloud/vertex-ai": "^1.4.0",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.6.12"
   }
 }
