--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "speakmate-cloudrun",
-  "version": "1.2.0",
+  "version": "1.1.0",
   "description": "SpeakMate AI Telegram Bot on Google Cloud Run",
   "main": "index.js",
   "scripts": {
@@ -10,10 +10,10 @@
     "express": "^4.18.2",
     "form-data": "^4.0.0",
     "node-fetch": "^2.6.12",
-    "@google-cloud/translate": "^8.5.0",
-    "@google-cloud/speech": "^6.7.0",
-    "@google-cloud/text-to-speech": "^5.4.0",
-    "@google/genai": "^0.5.0"
+    "@google-cloud/translate": "^6.2.0",
+    "@google-cloud/speech": "^4.4.0",
+    "@google-cloud/text-to-speech": "^4.0.0",
+    "@google-cloud/vertex-ai": "^1.4.0"
   },
   "engines": {
     "node": ">=18"
